<resources>
    <string name="app_name">Somjai Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_qr30">Payment (QR 30)</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_payment">Payment (QR 30)</string>
    <string name="menu_my_prompt">MyPrompt QR</string>
    <string name="menu_slip_verification">Slip Verification</string>
    <string name="menu_about_us">About Us</string>
</resources>