<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.digitalacademy.somjai.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_payment"
        android:name="com.digitalacademy.somjai.ui.payment.PaymentFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_payment" />

    <fragment
        android:id="@+id/nav_my_prompt"
        android:name="com.digitalacademy.somjai.ui.payment.PaymentFragment"
        android:label="@string/menu_my_prompt"
        tools:layout="@layout/fragment_payment" />

    <fragment
        android:id="@+id/nav_slip_verification"
        android:name="com.digitalacademy.somjai.ui.verification.SlipVerificationFragment"
        android:label="@string/menu_slip_verification"
        tools:layout="@layout/fragment_slip_verification" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.digitalacademy.somjai.ui.aboutUs.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />
</navigation>